dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foaas-deployment
  labels:
    app: foaas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foaas
  template:
    metadata:
      labels:
        app: foaas
    spec:
      containers:
      - name: foaas
        image: pincher95/foaas:3
        ports:
        - containerPort: 5000
