dev/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: foaas-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: LoadBalancer
spec:
  type: LoadBalancer
  selector:
    app: foaas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
